// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api-catalog response > preserves the GET contract 1`] = `
{
  "body": "{"version":1,"items":["first","second"]}",
  "headers": {
    "content-type": "application/linkset+json; profile="https://www.rfc-editor.org/info/rfc9727"",
    "link": "<https://example.com/.well-known/api-catalog>; rel="api-catalog"; type="application/linkset+json"; profile="https://www.rfc-editor.org/info/rfc9727"",
  },
  "status": 200,
}
`;

exports[`api-catalog response > preserves the HEAD contract 1`] = `
{
  "body": "",
  "headers": {
    "content-type": "application/linkset+json; profile="https://www.rfc-editor.org/info/rfc9727"",
    "link": "<https://example.com/.well-known/api-catalog>; rel="api-catalog"; type="application/linkset+json"; profile="https://www.rfc-editor.org/info/rfc9727"",
  },
  "status": 200,
}
`;
